ALangParser.py
# Generated from ALang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ALangParser ( Parser ):

    grammarFileName = "ALang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'<'", "'>'", "'=='", "'!='", "'>='", 
                     "'<='", "'or'", "'and'", "'return'", "'var'", "'const'", 
                     "'='", "'while'", "'if'", "'else'", "'{'", "'}'", "'function'", 
                     "'null'", "'this'", "'class'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NULL", "THIS", 
                      "CLASS", "BOOL", "VAR", "LABEL", "BITNUM", "INT", 
                      "ExponentPart", "FLOAT", "STRING", "NORMALSTRING", 
                      "CHARSTRING", "LONGSTRING", "SPACE", "COMMENT" ]

    RULE_start = 0
    RULE_expression = 1
    RULE_if_expression = 2
    RULE_elseif_expression = 3
    RULE_else_expression = 4
    RULE_then = 5
    RULE_otherwise = 6
    RULE_block = 7
    RULE_function = 8

    ruleNames =  [ "start", "expression", "if_expression", "elseif_expression", 
                   "else_expression", "then", "otherwise", "block", "function" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    NULL=27
    THIS=28
    CLASS=29
    BOOL=30
    VAR=31
    LABEL=32
    BITNUM=33
    INT=34
    ExponentPart=35
    FLOAT=36
    STRING=37
    NORMALSTRING=38
    CHARSTRING=39
    LONGSTRING=40
    SPACE=41
    COMMENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ALangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ALangParser.ExpressionContext,i)


        def getRuleIndex(self):
            return ALangParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = ALangParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 162343550976) != 0):
                self.state = 18
                self.expression(0)
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ALangParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LabelExpressionReturnContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(ALangParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionReturn" ):
                return visitor.visitLabelExpressionReturn(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionFunctionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function(self):
            return self.getTypedRuleContext(ALangParser.FunctionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionFunction" ):
                return visitor.visitLabelExpressionFunction(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionLiteralStringContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(ALangParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionLiteralString" ):
                return visitor.visitLabelExpressionLiteralString(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionAssignContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(ALangParser.VAR, 0)
        def expression(self):
            return self.getTypedRuleContext(ALangParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionAssign" ):
                return visitor.visitLabelExpressionAssign(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionLabelContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(ALangParser.LABEL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionLabel" ):
                return visitor.visitLabelExpressionLabel(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionArithmeticCompareContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ALangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ALangParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionArithmeticCompare" ):
                return visitor.visitLabelExpressionArithmeticCompare(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionIfContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_expression(self):
            return self.getTypedRuleContext(ALangParser.If_expressionContext,0)

        def elseif_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ALangParser.Elseif_expressionContext)
            else:
                return self.getTypedRuleContext(ALangParser.Elseif_expressionContext,i)

        def else_expression(self):
            return self.getTypedRuleContext(ALangParser.Else_expressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionIf" ):
                return visitor.visitLabelExpressionIf(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionFunctionDefinitionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(ALangParser.VAR, 0)
        def function(self):
            return self.getTypedRuleContext(ALangParser.FunctionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionFunctionDefinition" ):
                return visitor.visitLabelExpressionFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionCallContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ALangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ALangParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionCall" ):
                return visitor.visitLabelExpressionCall(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionArithmeticContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ALangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ALangParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionArithmetic" ):
                return visitor.visitLabelExpressionArithmetic(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionLiteralNullContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NULL(self):
            return self.getToken(ALangParser.NULL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionLiteralNull" ):
                return visitor.visitLabelExpressionLiteralNull(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionLiteralIntContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(ALangParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionLiteralInt" ):
                return visitor.visitLabelExpressionLiteralInt(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionDefinitionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(ALangParser.VAR, 0)
        def expression(self):
            return self.getTypedRuleContext(ALangParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionDefinition" ):
                return visitor.visitLabelExpressionDefinition(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionVariableContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(ALangParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionVariable" ):
                return visitor.visitLabelExpressionVariable(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionArithmeticLogicalContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ALangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ALangParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionArithmeticLogical" ):
                return visitor.visitLabelExpressionArithmeticLogical(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionWhileContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(ALangParser.ExpressionContext,0)

        def block(self):
            return self.getTypedRuleContext(ALangParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionWhile" ):
                return visitor.visitLabelExpressionWhile(self)
            else:
                return visitor.visitChildren(self)


    class LabelExpressionLiteralBoolContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ALangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(ALangParser.BOOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelExpressionLiteralBool" ):
                return visitor.visitLabelExpressionLiteralBool(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ALangParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = ALangParser.LabelExpressionLabelContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 25
                self.match(ALangParser.LABEL)
                pass

            elif la_ == 2:
                localctx = ALangParser.LabelExpressionLiteralIntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 26
                self.match(ALangParser.INT)
                pass

            elif la_ == 3:
                localctx = ALangParser.LabelExpressionLiteralBoolContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 27
                self.match(ALangParser.BOOL)
                pass

            elif la_ == 4:
                localctx = ALangParser.LabelExpressionLiteralNullContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 28
                self.match(ALangParser.NULL)
                pass

            elif la_ == 5:
                localctx = ALangParser.LabelExpressionLiteralStringContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 29
                self.match(ALangParser.STRING)
                pass

            elif la_ == 6:
                localctx = ALangParser.LabelExpressionReturnContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 30
                self.match(ALangParser.T__16)
                self.state = 31
                self.expression(8)
                pass

            elif la_ == 7:
                localctx = ALangParser.LabelExpressionFunctionDefinitionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 32
                _la = self._input.LA(1)
                if not(_la==18 or _la==19):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 33
                self.match(ALangParser.VAR)
                self.state = 34
                self.match(ALangParser.T__19)
                self.state = 35
                self.function()
                pass

            elif la_ == 8:
                localctx = ALangParser.LabelExpressionDefinitionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 36
                _la = self._input.LA(1)
                if not(_la==18 or _la==19):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 37
                self.match(ALangParser.VAR)
                self.state = 38
                self.match(ALangParser.T__19)
                self.state = 39
                self.expression(6)
                pass

            elif la_ == 9:
                localctx = ALangParser.LabelExpressionAssignContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 40
                self.match(ALangParser.VAR)
                self.state = 41
                self.match(ALangParser.T__19)
                self.state = 42
                self.expression(5)
                pass

            elif la_ == 10:
                localctx = ALangParser.LabelExpressionIfContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 43
                self.if_expression()
                self.state = 47
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 44
                        self.elseif_expression() 
                    self.state = 49
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 51
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 50
                    self.else_expression()


                pass

            elif la_ == 11:
                localctx = ALangParser.LabelExpressionVariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 53
                self.match(ALangParser.VAR)
                pass

            elif la_ == 12:
                localctx = ALangParser.LabelExpressionWhileContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 54
                self.match(ALangParser.T__20)
                self.state = 55
                self.match(ALangParser.T__0)
                self.state = 56
                self.expression(0)
                self.state = 57
                self.match(ALangParser.T__2)
                self.state = 58
                self.block()
                pass

            elif la_ == 13:
                localctx = ALangParser.LabelExpressionFunctionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 60
                self.function()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 86
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = ALangParser.LabelExpressionArithmeticContext(self, ALangParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 63
                        if not self.precpred(self._ctx, 16):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 16)")
                        self.state = 64
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 496) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 65
                        self.expression(17)
                        pass

                    elif la_ == 2:
                        localctx = ALangParser.LabelExpressionArithmeticCompareContext(self, ALangParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 66
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 67
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 32256) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 68
                        self.expression(16)
                        pass

                    elif la_ == 3:
                        localctx = ALangParser.LabelExpressionArithmeticLogicalContext(self, ALangParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 69
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 70
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==15 or _la==16):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 71
                        self.expression(15)
                        pass

                    elif la_ == 4:
                        localctx = ALangParser.LabelExpressionCallContext(self, ALangParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 72
                        if not self.precpred(self._ctx, 17):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 17)")
                        self.state = 73
                        self.match(ALangParser.T__0)
                        self.state = 79
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt==1:
                                self.state = 74
                                self.expression(0)
                                self.state = 75
                                self.match(ALangParser.T__1) 
                            self.state = 81
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                        self.state = 83
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & 162343550976) != 0):
                            self.state = 82
                            self.expression(0)


                        self.state = 85
                        self.match(ALangParser.T__2)
                        pass

             
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class If_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ALangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(ALangParser.BlockContext,0)


        def getRuleIndex(self):
            return ALangParser.RULE_if_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_expression" ):
                return visitor.visitIf_expression(self)
            else:
                return visitor.visitChildren(self)




    def if_expression(self):

        localctx = ALangParser.If_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_if_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(ALangParser.T__21)
            self.state = 92
            self.match(ALangParser.T__0)
            self.state = 93
            self.expression(0)
            self.state = 94
            self.match(ALangParser.T__2)
            self.state = 95
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elseif_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ALangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(ALangParser.BlockContext,0)


        def getRuleIndex(self):
            return ALangParser.RULE_elseif_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseif_expression" ):
                return visitor.visitElseif_expression(self)
            else:
                return visitor.visitChildren(self)




    def elseif_expression(self):

        localctx = ALangParser.Elseif_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_elseif_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ALangParser.T__22)
            self.state = 98
            self.match(ALangParser.T__21)
            self.state = 99
            self.match(ALangParser.T__0)
            self.state = 100
            self.expression(0)
            self.state = 101
            self.match(ALangParser.T__2)
            self.state = 102
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(ALangParser.BlockContext,0)


        def getRuleIndex(self):
            return ALangParser.RULE_else_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_expression" ):
                return visitor.visitElse_expression(self)
            else:
                return visitor.visitChildren(self)




    def else_expression(self):

        localctx = ALangParser.Else_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_else_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(ALangParser.T__22)
            self.state = 105
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ALangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ALangParser.ExpressionContext,i)


        def getRuleIndex(self):
            return ALangParser.RULE_then

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThen" ):
                return visitor.visitThen(self)
            else:
                return visitor.visitChildren(self)




    def then(self):
